# omegastar

./: .bazelrc  .gitignore  README.md  WORKSPACE
omegastar/: BUILD.bazel  igenerator.h  random.h  test_random.cc
