licenses(["notice"])

TEST_SRCS = glob(["test_*.cc"]) + ["test.cc"]

filegroup(
    name = "omegastar_hdrs",
    srcs = glob(["*.h"]),
)

#filegroup(
    #name = "omegastar_srcs",
    #srcs = glob(["*.cc"], exclude=TEST_SRCS),
#)

filegroup(
    name = "srcs",
    srcs = [
        ":omegastar_hdrs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

######### LIBRARIES #########

cc_library(
    name = "omegastar",
    hdrs = [":omegastar_hdrs"],
    deps = ["@boost//:uuid"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    srcs = TEST_SRCS,
    deps = [
        "//omegastar",
        "@gtest//:gtest",
    ],
)
